--- a/styles.css
+++ b/styles.css
@@ -4,48 +4,10 @@ body {
   background-color: #F9F7EB;
 }
 
-#title {
-  font-family: 'Merriweather';
-  text-align: center;
-  padding: 30px;
-  font-size: 28px;
-  letter-spacing: -0.01em;
-  color: #333;
-}
 
-#legend {
-  display: flex;
-  justify-content: flex-end;
-  padding: 0 10px 10px;
-  font-size: 12px;
-}
-
-#legend .item {
-  line-height: 12px;
-  padding: 0 10px 0 4px;
-}
-
-#legend .item.male {
-  border-left: 12px solid #19A0AA;
-}
-
-#legend .item.female {
-  border-left: 12px solid #F15F36;
-}
-
-
-#chart-wrapper {
-  height: 1000px;
-}
-
-#footer {
-  display: flex;
-  justify-content: space-between;
-  padding: 20px 10px;
-  color: #aaa;
-  font-size: 12px;
-}
-
-#footer a {
-  color: #aaa;
+.chart-container {
+  margin-left: 1000px;
+  margin-top: 400px;
+  height: 700px;
+  width: 700px;
 }
